--- a/_config.yml
+++ b/_config.yml
@@ -99,8 +99,12 @@ ignore:
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: landscape
+# theme: icarus
+# theme: sukka
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: ''
+  type: git
+  repo: git@github.com:rochzp/rochzp.github.io.git
+  branch: hexo
